Login/Registration Mobile Fixes

--- a/public/styles/login_style.css
+++ b/public/styles/login_style.css
@@ -175,7 +175,7 @@ h1{
 
 #forgot-password-block{
   display: inline-block;
-  margin-left: 50px;
+  margin-left: 20px;
   margin-top: -5px;
 }
 
@@ -185,6 +185,7 @@ h1{
   background-color: var(--cardColor);
   margin-left: auto;
   margin-right: auto;
+  width: 90%;
   max-width: 450px;
   height: auto;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
@@ -234,8 +235,8 @@ h1{
 
 .logo{
     display: block;
-    width: 300px;
-    height: 180px;
+    width: 100%;
+    height: 130px;
     object-fit: contain;
     margin-left: auto;
     margin-right: auto;
@@ -522,6 +523,25 @@ input[type="checkbox"]:checked + label{
 
 /* END REGISTRATION PAGE */
 
+
+
+@media only screen and (min-width: 480px){
+  .loginCard{
+    width: 100%;
+  }
+
+  #forgot-password-block{
+    margin-left: 50px;
+  }
+
+  .logo{
+      width: 300px;
+      height: 180px;
+      padding-top: 20px;
+      padding-bottom: 10px;
+  }
+
+}
 
 
 @media only screen and (min-width: 690px){
